welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:8: error: not found: value nbPas
	for (k <- 0 to nbPas){
                       ^