welcome.lessons.welcome.loopfor.LoopFor.scala.code


while(estSurBiscuit==false){
	avance();
	prendBiscuit();
	if(estDosMur==false){
	for (k <- 0 to nbPas){
	recule();
	}
	poseBiscuit();
}
}


